Sample_project/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <picklist>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lavender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HTML_Color_Code__c</fullName>
        <formula>CASE(Color__c 

,&apos;Blue&apos; 
,&apos;#0000FF&apos; 

,&apos;Green&apos;
,&apos;#008000&apos;

,&apos;Lavender&apos;
,&apos;#E6E6FA&apos;

,&apos;Orange&apos;
,&apos;#FFA500&apos;

,&apos;Pink&apos;
,&apos;#FFC0CB&apos;

,&apos;Purple&apos;
,&apos;#800080&apos;

,&apos;Red&apos;
,&apos;#FF0000&apos;

,&apos;Yellow&apos;
,&apos;#FFFF00&apos;

,&apos;White&apos;
,&apos;#FFFFFF&apos;

,&apos;#000000&apos;

)</formula>
        <label>HTML Color Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Inventory__c</fullName>
        <label>Initial Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory_Remaining__c</fullName>
        <formula>Initial_Inventory__c - Inventory_Used__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inventory Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory_Used__c</fullName>
        <label>Inventory Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>Negative_Inventory_Remaining</fullName>
        <active>true</active>
        <errorConditionFormula>Inventory_Remaining__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Inventory_Used__c</errorDisplayField>
        <errorMessage>You may not use more Inventory than is Remaining</errorMessage>
    </validationRules>
</CustomObject>